[tool.poetry]
name = "sql-agent"
version = "0.1.0"
description = "text2sql-agent"
authors = ["hitsz-ids"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas="2.1.1"
fastapi="0.99.1"
langchain-community=" 0.0.20"
tiktoken="0.5.1"
uvicorn="0.23.2"
python-dotenv="1.0.0"
shortuuid="1.0.11"
sentence-transformers=" 2.2.2"
unstructured="0.10.16"
python-docx="0.8.11"
httpx="0.24.1"
python-multipart="0.0.6"
pydantic="1.10.12"
overrides="7.4.0"
langchain="0.1.0"
transformers = "^4.39.0"
scikit-learn = "^1.4.1.post1"
torch = "2.0.1"
pymongo = "^4.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
