[tool.poetry]
name = "airda"
version = "0.0.3"
description = "airda"
authors = ["hitsz-ids"]
include = [".env"]
readme = ["README.md"]
exclude = ["*.log", "log_config.yml", "*.template", "*.lock"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.1.1"
python-dotenv = "1.0.0"
shortuuid = "1.0.11"
unstructured = "0.10.16"
python-docx = "0.8.11"
httpx = "0.24.1"
sql-metadata = "2.8.0"
sqlparse = "0.4.4"
pyarmor = "7.7.4"
python-multipart = "0.0.6"
pydantic = "1.10.12"
overrides = "7.4.0"
jieba = "0.42.1"
openpyxl = "3.1.2"
langchain = "0.1.0"
transformers = "^4.39.0"
scikit-learn = "^1.4.1.post1"
torch = "2.0.1"
pymongo = "^4.6.2"
prompt-toolkit = "^3.0.43"
pyyaml = "^6.0.1"
mysql-connector-python = "^8.3.0"
fastapi = "0.99.0"

[tool.poetry.scripts]
airda = "airda.cli.startup:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

